# elec143-ta

week2/: CMakeLists.txt  flight_computer.c  flight_computer.h  safety_monitor.c  simple.c  traffic_light_controller.c  traffic_light_system.c  traffic_light_system.h
week3/lab3/: CMakeLists.txt  task1.c  task2.c
